Kubernetes/cilium/hostnameroute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-nginx
  namespace: nginx-staging
spec:
  hostnames:
  - nginx.example.com  # Set via DNS to cilium gateway IP or App gateway IP
  parentRefs:
  - name: cil-gateway
    namespace: nginx-staging
  rules:
  - backendRefs:
    - name: nginx-service
      port: 8083
